tests/valid/lifetime/outlives_same_lifetime_arg.facet
fn use_same<'a>(r: unrestricted &'a unrestricted isize) -> unrestricted &'a unrestricted isize {
    r
}

fn caller<'a>(x: unrestricted &'a unrestricted isize) -> unrestricted &'a unrestricted isize {
    (use_same x)
}
